<resources>
    <string name="app_name">Ration</string>

    <string name="make_a_diet_for_the_week">Составить рацион на неделю</string>
    <string name="make_a_new_diet_for_the_week">Составить новый рацион на неделю</string>
    <string name="add_product">Добавить продукт</string>
    <string name="product_changed">Продукт заменен</string>
    <string name="add_product_to_DB">Добавить продукт в базу</string>
    <string name="end_choose">Завершить выбор</string>
    <string name="delete">Удалить</string>
    <string name="enter_mass">Введите массу</string>
    <string name="choose_products">Выберите продукты</string>
    <string name="added_product">Продукт добавлен</string>
    <string name="deleted_product">Продукт удален</string>
    <string name="search_on_product">Поиск по продуктам</string>
    <string name="empty"></string>
    <string name="enter_name">Введите название</string>
    <string name="enter_calories">Введите калории</string>
    <string name="enter_fat">Введите жиры</string>
    <string name="enter_protein">Введите белки</string>
    <string name="enter_carbohydrate">Введите углеводы</string>
    <string name="calories">Калории:</string>
    <string name="fat">Жиры:</string>
    <string name="protein">Белки:</string>
    <string name="carbohydrate">Углеводы:</string>
    <string name="choose_time_to_eat">Выберите категорию:</string>
    <string name="breakfast">Завтраки</string>
    <string name="lunch">Обед</string>
    <string name="dinner">Ужин</string>
    <string name="drinks">Напитки</string>
    <string name="soup">Супы</string>
    <string name="second_courses">Вторые блюда</string>
    <string name="add_product_error">Заполните все поля!</string>
    <string name="salad">Салаты</string>
    <string name="add_product_rules">Введите данные на 100г продукта</string>
    <string name="calculator_calories">Калькулятор калорий</string>
    <string name="delete_product_from_DB">Удалить продукт из базы</string>
    <string name="create_ration">Составить рацион</string>
    <string name="change_product">Заменить продукт</string>

    <string name="choose_sex">Выберите пол:</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="enter_weight">Введите вес</string>
    <string name="enter_height">Введите рост</string>
    <string name="enter_age">Введите возраст</string>
    <string name="enter_data_of_human">Введите ваши данные</string>
    <string name="end_enter">Завершить ввод</string>
    <string name="activity_level">Уровень активности:</string>
    <string name="activity_low">Низкая активность</string>
    <string name="activity_light">Легкие упражнения</string>
    <string name="activity_average">Умеренная физическая нагрузка</string>
    <string name="activity_high">Активная жизнь</string>
    <string name="activity_very_high">Очень активная жизнь</string>
    <string name="purpose">Цель:</string>
    <string name="weight_lose">Снижение веса</string>
    <string name="weight_up">Набор массы</string>
    <string name="weight_retention">Удержание веса</string>
    <string name="activity_low_rules">Низкая активность - в основном сидячие виды активности.</string>
    <string name="activity_light_rules">Легкие упражнения – небыстрая ходьба в течение 30–50 минут 3–4 дня в неделю, гольф, домашние дела.</string>
    <string name="activity_average_rules">Умеренная физическая нагрузка – 60–70% от вашего максимально пульса течение 30–60 минут за тренировку.</string>
    <string name="activity_high_rules">Активная жизнь – занимающихся 6–7 раз в неделю при интенсивности от умеренной до высокой (70–85% от вашего максимально пульса в течение 45–60 минут за тренировку.</string>
    <string name="activity_very_high_rules">Очень активная жизнь – те, кто занимается тяжелыми / интенсивными физическими нагрузками, как тяжелый ручной труд, тяжелая атлетика, командные виды спорта, 6–7 раз в неделю в течение 90 минут и более за тренировку.</string>
    <string name="delete_product_text">Вы действительно хотите удалить </string>
    <string name="yes">Да </string>
    <string name="no">Нет</string>
    <string name="accessibly">Понятно</string>
    <string name="your_ration">Ваш рацион на неделю</string>
    <string name="choose_product">Выберите продукт:</string>

    <string name="no_product_in_db">Этот продукт был удален из базы.</string>
    <string name="change_product_in_weight">Замените продукт!</string>

    <string name="add_breakfast_to_DB">Добавьте завтрак в базу данных!</string>
    <string name="add_hotter_to_DB">Добавьте суп в базу данных!</string>
    <string name="add_second_to_DB">Добавьте второе в базу данных!</string>
    <string name="add_salad_to_DB">Добавьте салат в базу данных!</string>
    <string name="add_drink_to_DB">Добавьте напиток в базу данных!</string>

</resources>