<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sex_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_sex"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/male_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
        app:layout_constraintStart_toStartOf="@+id/sex_text_view"
        app:layout_constraintTop_toBottomOf="@+id/sex_text_view" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/female_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/male_check" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/human_weight_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_weight"
        android:inputType="number"
        android:maxLength="@integer/max_length_input_data_of_human"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/female_check" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/human_height_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_height"
        android:inputType="number"
        android:maxLength="@integer/max_length_input_data_of_human"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/human_weight_text_view"
        app:layout_constraintTop_toBottomOf="@+id/human_weight_text_view" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/human_age_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_age"
        android:inputType="number"
        android:maxLength="@integer/max_length_input_data_of_human"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/human_height_text_view"
        app:layout_constraintTop_toBottomOf="@+id/human_height_text_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/end_enter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_up_check" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/activity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/activity_level"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sex_text_view"
        app:layout_constraintTop_toTopOf="@+id/sex_text_view" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/low_activity_check"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/checkbox_activity_height"
        android:layout_margin="0dp"
        android:text="@string/activity_low"
        app:layout_constraintStart_toStartOf="@+id/activity_text_view"
        app:layout_constraintTop_toBottomOf="@+id/activity_text_view" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/light_activity_check"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/checkbox_activity_height"
        android:text="@string/activity_light"
        app:layout_constraintStart_toStartOf="@+id/low_activity_check"
        app:layout_constraintTop_toBottomOf="@+id/low_activity_check" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/average_activity_check"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/activity_average"
        app:layout_constraintEnd_toEndOf="@+id/light_activity_check"
        app:layout_constraintStart_toStartOf="@+id/light_activity_check"
        app:layout_constraintTop_toBottomOf="@+id/light_activity_check" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/high_activity_check"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/checkbox_activity_height"
        android:text="@string/activity_high"
        app:layout_constraintStart_toStartOf="@+id/average_activity_check"
        app:layout_constraintTop_toBottomOf="@+id/average_activity_check" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/very_high_activity_check"
        android:layout_width="0dp"
        android:layout_height="@dimen/checkbox_activity_height"
        android:text="@string/activity_very_high"
        app:layout_constraintEnd_toEndOf="@+id/average_activity_check"
        app:layout_constraintStart_toStartOf="@+id/average_activity_check"
        app:layout_constraintTop_toBottomOf="@+id/high_activity_check" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/purpose_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purpose"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/human_age_text_view"
        app:layout_constraintTop_toBottomOf="@+id/human_age_text_view" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/weight_lose_check"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/checkbox_activity_height"
        android:text="@string/weight_lose"
        app:layout_constraintStart_toStartOf="@+id/purpose_text_view"
        app:layout_constraintTop_toBottomOf="@+id/purpose_text_view" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/weight_retention_check"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/checkbox_activity_height"
        android:text="@string/weight_retention"
        app:layout_constraintStart_toStartOf="@+id/weight_lose_check"
        app:layout_constraintTop_toBottomOf="@+id/weight_lose_check" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/weight_up_check"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/checkbox_activity_height"
        android:text="@string/weight_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_retention_check" />

    <ImageButton
        android:id="@+id/low_activity_rules_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/invisible"
        app:layout_constraintBottom_toBottomOf="@+id/low_activity_check"
        app:layout_constraintStart_toEndOf="@+id/low_activity_check"
        app:layout_constraintTop_toTopOf="@+id/low_activity_check"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

    <ImageButton
        android:id="@+id/light_activity_rules_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/invisible"
        app:layout_constraintBottom_toBottomOf="@+id/light_activity_check"
        app:layout_constraintStart_toEndOf="@+id/light_activity_check"
        app:layout_constraintTop_toTopOf="@+id/light_activity_check"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

    <ImageButton
        android:id="@+id/average_activity_rules_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/invisible"
        app:layout_constraintBottom_toBottomOf="@+id/average_activity_check"
        app:layout_constraintStart_toEndOf="@+id/average_activity_check"
        app:layout_constraintTop_toTopOf="@+id/average_activity_check"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

    <ImageButton
        android:id="@+id/high_activity_rules_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/invisible"
        app:layout_constraintBottom_toBottomOf="@+id/high_activity_check"
        app:layout_constraintStart_toEndOf="@+id/high_activity_check"
        app:layout_constraintTop_toTopOf="@+id/high_activity_check"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

    <ImageButton
        android:id="@+id/very_high_activity_rules_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/invisible"
        app:layout_constraintBottom_toBottomOf="@+id/very_high_activity_check"
        app:layout_constraintStart_toEndOf="@+id/very_high_activity_check"
        app:layout_constraintTop_toTopOf="@+id/very_high_activity_check"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

</androidx.constraintlayout.widget.ConstraintLayout>