<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_breakfast"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="2dp"
        android:padding="@dimen/button_ration_padding"
        android:text="@string/breakfast"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_second"
        app:layout_constraintEnd_toStartOf="@+id/button_soup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_soup"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="2dp"
        android:padding="@dimen/button_ration_padding"
        android:text="@string/soup"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_second"
        app:layout_constraintEnd_toStartOf="@+id/button_salats"
        app:layout_constraintStart_toEndOf="@+id/button_breakfast"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_salats"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:padding="@dimen/button_ration_padding"
        android:text="@string/salad"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_drinks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_soup"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="2dp"
        android:padding="@dimen/button_ration_padding"
        android:text="@string/second_courses"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/search_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/button_drinks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_breakfast" />

    <Button
        android:id="@+id/button_drinks"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="2dp"
        android:padding="@dimen/button_ration_padding"
        android:text="@string/drinks"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@+id/search_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toEndOf="@+id/button_second"
        app:layout_constraintTop_toBottomOf="@+id/button_salats" />

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:hint="@string/search_on_product"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_drinks" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_choose_product_item"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:choiceMode="singleChoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>